# PFL.cmake

./: .cmake-format.py  CMakeLists.txt  PFL.cmake  README.md
.github/workflows/: checks.yaml  prerelease.yaml  release.yaml
cmake/: PFL.cmake.in
docs/: PFL.html  PFL_add_executable.md  PFL_add_libraries.md  PFL_add_library.md  PFL_init.md
examples/application/: CMakeLists.txt  README.md
examples/application/apps/example/: CMakeLists.txt
examples/application/apps/example/src/: main.cpp
examples/application/src/: main.cpp
examples/application/src/PFLApplicationExample/: lib.cpp  lib.hpp
examples/libraries/: CMakeLists.txt  README.md
examples/libraries/cmake/: PFL.cmake
examples/libraries/examples/example1/: CMakeLists.txt
examples/libraries/examples/example1/src/: main.cpp
examples/libraries/libs/A/: CMakeLists.txt
examples/libraries/libs/A/include/PFLLibrariesExample/A/: lib.hpp
examples/libraries/libs/A/misc/cmake/: PFLLibrariesExampleAConfig.cmake.in
examples/libraries/libs/B/: CMakeLists.txt
examples/libraries/libs/B/misc/cmake/: PFLLibrariesExampleBConfig.cmake.in
examples/libraries/libs/C/: CMakeLists.txt
examples/libraries/libs/C/misc/cmake/: PFLLibrariesExampleCConfig.cmake.in
examples/libraries/libs/Core/: CMakeLists.txt
examples/libraries/libs/Core/src/MathUtils/Core/: add.cxx
examples/libraries/libs/Internal/: CMakeLists.txt
examples/libraries/misc/cmake/: PFLLibrariesExampleConfig.cmake.in
tests/: CMakeLists.txt  expected-files  main.cpp  tests.sh
tests/src/: examples.test.cpp
tools/: release.sh  update-PFL-docs.sh
(+8 files in other folders)
